Fix illustration overflow

--- a/app/assets/styles/home/_global.scss
+++ b/app/assets/styles/home/_global.scss
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     min-height: 100vh;
+    position: relative;
   }
 }
 
@@ -113,15 +114,15 @@
 /* Illustration
    ========================================================================== */
 
-.home-media,
-.home-media__item {
+.home-media {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   z-index: 1;
   margin: 0;
+  overflow: hidden;
 
   svg {
     display: block;
@@ -138,7 +139,13 @@
   }
 }
 
-.home-media {
+.home-media__item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
   /* Animation */
   animation: illu-in 1.5s ease-in-out 0s 1;
 }
